# menta

./: .gitignore  LICENSE  README.md  flake.nix  pyproject.toml
.github/workflows/: build.yaml
menta/: __init__.py  _core.py  errors.py  utils.py
tests/: __init__.py  conftest.py  test_decode.py  test_encode.py  test_perf.py  test_sanity.py
