[tool.poetry]
name = "menta"
version = "0.0.1"
description = "Secure, simple and easy to use API token format"
authors = ["Alexander Bakker <ab@alexbakker.me>"]
license = "MIT"
readme = "README.md"

homepage = "https://github.com/alexbakker/menta"
repository = "https://github.com/alexbakker/menta"
documentation = "https://github.com/alexbakker/menta"

[tool.poetry.dependencies]
python = "^3.8"
PyNaCl = "^1.5.0"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
coverage = "^6.3.3"
coverage-badge = "^1.1.0"
freezegun = "^1.2.1"
pytest = "^7.1.2"
pylint = "^2.13.8"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
