[tool.poetry]
name = "menta"
version = "0.0.1-alpha.2"
description = "Secure, simple and easy to use API token format"
authors = ["Alexander Bakker <ab@alexbakker.me>"]
license = "MIT"
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Topic :: Security",
    "Topic :: Security :: Cryptography",
]
keywords = ["api", "token", "xchacha20", "poly1305"]
homepage = "https://github.com/alexbakker/menta"
repository = "https://github.com/alexbakker/menta"
documentation = "https://github.com/alexbakker/menta"

[tool.poetry.dependencies]
python = "^3.8"
PyNaCl = "^1.5.0"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
coverage = "^6.3.3"
coverage-badge = "^1.1.0"
freezegun = "^1.2.1"
pytest = "^7.1.2"
pytest-benchmark = "^3.4.1"
pylint = "^2.13.8"
mypy = "^0.950"

[tool.mypy]
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
implicit_reexport = false
strict_equality = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
